# pyldsdk

./: .gitignore  LICENSE  README.md  pyproject.toml
pyldsdk/: __init__.py  main.py  types.py
tests/: config.json  pyldsdk_test.py
tests/download/: AB5069L306ER_v35.ACD
